--- a/tyylit.css
+++ b/tyylit.css
@@ -26,7 +26,18 @@ input {
 }
 
 table {
-  font-family: Arial, Helvetica, sans-serif;
+  padding: 20x;
   border-collapse: collapse;
   width: 100%;
+}
+
+tr {
+  border-bottom: 3px solid #161616;
+}
+
+td,
+th {
+  padding: 20px;
+  border-radius: 4px;
+  border: 1px solid black;
 }
