--- a/tyylit.css
+++ b/tyylit.css
@@ -1,3 +1,7 @@
+body {
+  background-color: lightgray;
+}
+
 #information {
   background-color: darkgray;
   padding: 50px;
@@ -29,6 +33,7 @@ table {
   padding: 20x;
   border-collapse: collapse;
   width: 100%;
+  background-color: rgb(202, 204, 207);
 }
 
 tr {
@@ -39,5 +44,10 @@ td,
 th {
   padding: 20px;
   border-radius: 4px;
-  border: 1px solid black;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+
+h1 {
+  margin: 30px;
 }
